Rename of app: mail -> inbox

--- a/src/apps/app-mail/app-mail-message/app-mail-message-toolbar/app-mail-message-toolbar.html
+++ b/src/apps/app-mail/app-mail-message/app-mail-message-toolbar/app-mail-message-toolbar.html
@@ -73,7 +73,7 @@
             color="rgba(0, 0, 0, 0.54)"
             size="16">
           </pcd-icon>
-          Edit Mail
+          Edit Message
         </md-button>
       </md-menu-item>
       <md-menu-item ng-if="$ctrl.options.actions.saveMsgBtn">
