--- a/src/apps/app-mail/app-mail.html
+++ b/src/apps/app-mail/app-mail.html
@@ -2,7 +2,7 @@
   <md-button
     class="app-mail__btn-new"
     ng-click="$ctrl.newMail()">
-    + New Mail
+    + New Message
   </md-button>
 
   <div
