--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data:">
-    <title>Mail</title>
+    <title>Inbox</title>
     <link rel="shorcut icon" type="image/png" href="./assets/images/3NLogo100.png">
     <link href="./libs/angular/angular-csp.css" rel="stylesheet">
     <link href="./libs/angular-material/angular-material.min.css" rel="stylesheet">
